--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     fireworks.start()
 </script>
 <style>
+    html, body {
+        padding: 0;
+        margin: 0;
+    }
     .fireworks {
         width: 100%;
         height: 100%;
